Fixed Chevron Alignment

--- a/repo-layout/css/link.css
+++ b/repo-layout/css/link.css
@@ -2,6 +2,7 @@
 	background-repeat: no-repeat;
 	background-image: url(../../assets/chevron@2x.png);
 	background-position-x: 100%;
+	background-position-y: center;
 	background-size: 10px 13px;
 }
 
